--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,12 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'me.tatarka:gradle-retrolambda:3.7.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         classpath 'com.google.gms:google-services:3.0.0'
     }
 
 }
+
 plugins {
     id "com.jfrog.bintray" version "1.7.3"
 }
@@ -22,5 +24,8 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://oss.sonatype.org/content/groups/public/" }
+        maven {
+            url 'https://maven.google.com'
+        }
     }
 }
