--- a/locgetter/build.gradle
+++ b/locgetter/build.gradle
@@ -3,10 +3,10 @@ apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.jfrog.bintray'
 
 def google_play_version = "11.0.4"
-def buildName = "1.10.0"
-def buildCode = 8
-def mSiteUrl = 'https://github.com/blainepwnz/AndroidContacts'
-def mGitUrl = 'https://github.com/blainepwnz/AndroidContacts.git'
+def buildName = "1.0.0"
+def buildCode = 1
+def mSiteUrl = 'https://github.com/titanium-codes'
+def mGitUrl = 'https://github.com/titanium-codes/LocGetter'
 
 android {
     compileSdkVersion 26
@@ -32,56 +32,48 @@ android {
 
 dependencies {
     //Rx Android & Java libraries
+    compile "com.android.support:design:26.1.0"
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.3'
     compile 'com.google.android.gms:play-services-location:' + google_play_version
 }
 
-bintray {
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.apikey")
-
-    configurations = ['archives']
-    pkg {
-        userOrg = "blainepwnz"
-        repo = "maven"
-        name = "androidcontacts"
-        desc = 'Android library for contact aggregation'
-        websiteUrl = mSiteUrl
-        vcsUrl = mGitUrl
-        licenses = ["MIT"]
-        publish = true
-        version {
-            name = buildName
-            vcsTag = buildName
+tasks.whenTaskAdded { task ->
+    if (task.name == 'javadoc') {
+        task.configure {
+            failOnError false
         }
     }
 }
 
 ext {
-    bintrayRepo = 'maven'
-    bintrayName = 'androidcontacts'   // Has to be same as your library module name
+    bintrayRepo = 'Android'
+    bintrayName = 'locgetter'   // Has to be same as your library module name
 
-    publishedGroupId = 'com.tomash'
-    libraryName = 'androidcontacts'
-    artifact = 'androidcontacts'     // Has to be same as your library module name
+    publishedGroupId = 'codes.titanium'
+    libraryName = 'locgetter'
+    artifact = 'locgetter'     // Has to be same as your library module name
 
-    libraryDescription = 'Android library for contact aggregation'
+    libraryDescription = 'Android library for getting user current location'
 
     // Your github repo link
-    siteUrl = siteUrl
-    gitUrl = gitUrl
-    githubRepository= 'blainepwnz/AndroidContacts'
+    siteUrl = mSiteUrl
+    gitUrl = mGitUrl
+    githubRepository = 'titanium-codes/LocGetter'
 
     libraryVersion = buildName
 
     developerId = 'blainepwnz'
     developerName = 'Andrew Tomash'
-    developerEmail = 'kpubedko@gmail.com'
+    developerEmail = 'andrew.tomash@titanium-soft.com'
     licenseName = 'MIT'
     licenseUrl = 'https://opensource.org/licenses/MIT'
     allLicenses = ["MIT"]
 }
-
+bintray {
+    pkg {
+        userOrg = "titanium-codes"
+    }
+}
 apply from: 'https://raw.githubusercontent.com/nisrulz/JCenter/master/installv1.gradle'
 apply from: 'https://raw.githubusercontent.com/nisrulz/JCenter/master/bintrayv1.gradle'
