--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'me.tatarka:gradle-retrolambda:3.7.0'
@@ -24,8 +25,6 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://oss.sonatype.org/content/groups/public/" }
-        maven {
-            url 'https://maven.google.com'
-        }
+        google()
     }
 }
