--- a/locgetter/build.gradle
+++ b/locgetter/build.gradle
@@ -1,19 +1,17 @@
 apply plugin: 'com.android.library'
-apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.jfrog.bintray'
 
-def google_play_version = "11.0.4"
-def buildName = "1.0.2"
-def buildCode = 3
+def buildName = "1.0.3"
+def buildCode = 4
 def mSiteUrl = 'https://github.com/titanium-codes'
 def mGitUrl = 'https://github.com/titanium-codes/LocGetter'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion "26.0.2"
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode buildCode
         versionName buildName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -29,13 +27,13 @@ android {
         }
     }
 }
-
+// ./gradlew :locgetter:clean build install bintrayUpload to upload to bintray
 dependencies {
     //Rx Android & Java libraries
-    compile "com.android.support:design:26.1.0"
+    compile "com.android.support:design:27.0.0"
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
-    compile 'com.google.android.gms:play-services-location:' + google_play_version
+    compile 'io.reactivex.rxjava2:rxjava:2.1.5'
+    compile 'com.google.android.gms:play-services-location:11.4.2'
 }
 
 tasks.whenTaskAdded { task ->
