--- a/locgetter/src/main/AndroidManifest.xml
+++ b/locgetter/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.titanium.locgetter">
+    package="com.titanium.locgetter">
 
     <application>
+        <activity android:name=".main.ConnectableActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
     </application>
 
 </manifest>
