--- a/deps.gradle
+++ b/deps.gradle
@@ -3,12 +3,13 @@ ext.versions = [
         compileSdkVersion: 28,
         minSdk: 16,
         buildToolsVersion: '28.0.3',
-        publishVersion   : '1.1.1',
-        buildCode        : 4,
+        publishVersion   : '1.1.2',
+        buildCode        : 5,
         kotlinVersion : '1.3.11',
         //libs
         playServLocations :'com.google.android.gms:play-services-location:16.0.0',
         rxAndroid : 'io.reactivex.rxjava2:rxandroid:2.1.0',
         rxJava2 : 'io.reactivex.rxjava2:rxjava:2.2.3',
         kotlinStd : 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.11',
+        connectableActivity : 'codes.titanium:connectableactivity:1.0.3',
 ]
