updated manifest and deps

--- a/locgetter-sample/build.gradle
+++ b/locgetter-sample/build.gradle
@@ -27,8 +27,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
+    implementation versions.supportV7
+    implementation versions.supportV4
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation versions.rxAndroid
