--- a/deps.gradle
+++ b/deps.gradle
@@ -12,4 +12,6 @@ ext.versions = [
         rxJava2 : 'io.reactivex.rxjava2:rxjava:2.2.3',
         kotlinStd : 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.11',
         connectableActivity : 'codes.titanium:connectableactivity:1.0.3',
+        supportV7:'com.android.support:appcompat-v7:28.0.0',
+        supportV4:'com.android.support:support-v4:28.0.0'
 ]
