--- a/locgetter/build.gradle
+++ b/locgetter/build.gradle
@@ -28,6 +28,8 @@ android {
 
 dependencies {
     implementation versions.rxAndroid
+    implementation versions.supportV7
+    implementation versions.supportV4
     implementation versions.rxJava2
     implementation versions.playServLocations
     implementation versions.kotlinStd
