--- a/locgetter/src/main/AndroidManifest.xml
+++ b/locgetter/src/main/AndroidManifest.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.titanium.locgetter">
+<manifest package="com.titanium.locgetter">
 
-    <application>
-        <activity
-            android:name=".main.ConnectableActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-    </application>
+    <application />
 
 </manifest>
